third_party/move/move-compiler-v2/tests/more-v1/expansion/friend_decl_inner_scope_alias.exp

Diagnostics:
error: unbound module
  ┌─ tests/more-v1/expansion/friend_decl_inner_scope_alias.move:7:12
  │
7 │     friend A;
  │            ^ Unbound module alias 'A'
